# launchpad

./: '  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  Makefile  README.md  TODO.md
examples/: app.rs  assets.rs  async.rs  basic.rs  client.rs  cookie_util.rs  dynamic_route.rs  fetch.rs  file_read.rs  files.rs  full.rs  goal.rs  html.rs  html_templating.rs  no_markup.rs  quote.rs  requests.rs  response.rs  routing.rs  scoped.rs  server.rs  state.rs  templates.rs  test.rs  websocket.rs
examples/assets/: index.html  sample.json  sample.txt  sample_error.html
examples/assets/templates/: blog.hbs  home.hbs  home.html  index.html
examples/routes/: api.rs  error.rs  files.rs  json.rs  mod.rs
examples/templating/: Cargo.toml  README.md
examples/templating/examples/: askama.rs  handlebars.rs  tera.rs
examples/templating/src/: main.rs
examples/templating/templates/: index.hbs  index.html
examples/web/: index.txt  sample.txt
launchpad_lom/: Cargo.toml
launchpad_macros/: Cargo.toml  readme.md
launchpad_macros/src/: args.rs  docs.rs  lib.rs
launchpad_macros/src/request/: args.rs  methods.rs  mod.rs  props.rs
launchpad_macros/src/router/: args.rs  mod.rs
launchpad_props/: Cargo.toml
launchpad_props/src/: lib.rs
launchpad_router/: Cargo.toml
launchpad_router/src/: endpoint.rs  handler.rs  lib.rs  macros.rs  request.rs  response.rs
launchpad_uri/: Cargo.toml
launchpad_uri/src/: lib.rs
lib/examples/: Cargo.toml
lib/tela-html/: Cargo.toml
lib/tela-html/examples/: data.rs  element.rs  full.rs  html.rs  simple.rs  temp.rs
lib/tela-html/lib/proc/: Cargo.toml
lib/tela-html/lib/proc/src/: lib.rs
lib/tela-html/lib/proc/src/html/: constants.rs  mod.rs
lib/tela-html/src/: element.rs  lib.rs  prelude.rs
lib/tela-macros/: Cargo.toml
lib/tela-macros/src/: fetch.rs  lib.rs
macros/: Cargo.toml
macros/src/: debug_release.rs  fetch.rs  lib.rs  request.rs
new/: Cargo.toml
new/examples/: server.rs
new/src/: lib.rs  response.rs
new/src/client/: mod.rs
new/src/server/: error.rs  mod.rs  router.rs
scripts/: make_badges (2).py
src/: arguments.rs  body.rs  client.rs  cookie.rs  endpoint.rs  error.rs  errors.rs  handler.rs  lib.rs  main.rs  prelude.rs  request.rs  response.rs  router.rs  server.rs  state.rs  sync.rs  temp.rs  types.rs  uri.rs  websocket.rs
src/client/: mod.rs
src/docs/: root.md
src/extract/: from_request.rs  from_request_parts.rs  mod.rs
src/request/: body.rs  from_request.rs  from_request_parts.rs  mod.rs  query.rs  request_data.rs
src/response/: file.rs  html.rs  into_response.rs  json.rs  mod.rs  redirect.rs  returns.rs  wrapper.rs
src/response/template/: hbs.rs  mod.rs  ttera.rs
src/router/: endpoint.rs  macros.rs  mod.rs  request.rs  response.rs  router.rs
src/server/: mod.rs
src/server/router/: handler.rs  mod.rs  route.rs
src/v2/: endpoint.rs  mod.rs  prelude.rs  router.rs  server.rs  state.rs
wasm/: Cargo.toml  index.html
wasm/examples/: main.rs
wasm/src/: lib.rs
wayfinder/: Cargo.toml
wayfinder/examples/: app.rs
wayfinder/macros/src/: docs.rs  helpers.rs  lib.rs  request.rs
wayfinder/src/: lib.rs  prelude.rs
wayfinder/src/request/: body.rs  mod.rs  query.rs
web/: 404.html  getData.js  index.html  user.json
