[package]
name = "tela"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
fastwebsockets = { version = "0.6.0", features = [
  "base64",
  "http-body-util",
  "hyper",
  "hyper-util",
  "pin-project",
  "upgrade",
  "simdutf8",
] }
http-body-util = "0.1.0"
hyper = { version = "1.1.0", features = ["client", "http1", "server"] }
hyper-util = { version = "0.1.3", default_features = false, features = [
  "full",
] }
pin-project-lite = "0.2.13"
tokio = { version = "1.36.0", features = [
  "net",
  "rt",
  "fs",
  "macros",
  "rt-multi-thread",
] }
tower = "0.4.13"
tungstenite = { version = "0.21.0", features=["native-tls"] }
tokio-tungstenite = "0.21.0"
futures = "0.3.30"
