[package]
name = "launchpad-router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
launchpad-props = { path="../launchpad_props" }

hyper = { version = "1.0.0-rc.4", features = ["full"] }
bytes = "1.4.0"
http-body-util = "0.1.0-rc.3"
tokio = { version = "1.29.1", features = ["sync"] }

phf = { version = "0.11.2", features = ["macros"] }
regex = "1.9.1"
serde = "1.0.175"
serde_json = "1.0.103"
serde_plain = "1.0.1"
serde_qs = "0.12.0"
