[package]
name = "macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.29"
syn = { version = "2.0.23", features = ["full", "fold", "extra-traits"] }
syn-mid = "0.5.4"

[lib]
proc-macro=true
