[package]
name = "new"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html-to-string-macro = "0.2.5"
http-body-util = "0.1.0-rc.3"
hyper = { version = "1.0.0-rc.4", features = ["full"] }
# TODO: Resolve when final release is set
hyper-util = { git = "https://github.com/hyperium/hyper-util.git" } 
paste = "1.0.14"
tokio = { version = "1.32.0", features = ["full"] }
