[package]
name = "wayfinder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wayfinder-macros = { path="./macros" }

bytes = "1.4.0"
futures = "0.3.28"
futures-util = "0.3.28"
phf = { version = "0.11.2", features = ["macros", "phf_macros"] }

http-body-util = "0.1.0-rc.3"
html-to-string-macro = "0.2.5"
hyper = { version = "1.0.0-rc.4", features=["full"]}
tokio = { version = "1.29.1", features = ["full"] }
tower = { version = "0.4.13", features = ["timeout", "retry", "load", "balance", "buffer", "filter", "limit"] }

pin-project-lite = "0.2.10"
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
serde_plain = "1.0.1"
serde_qs = "0.12.0"

