[package]
name = "tela-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1" }
handlebars = { version = "4.4.0", features = ["dir_source", "walkdir"] }
tela = { path="../.." }
tera = "1.19.1"
