[package]
name = "tela-html"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0.14"
proc = { path="lib/proc" }
serde = { version="1.0.188", features=["derive"] }
serde_json = "1.0.107"

[features]
comments = []
auto-escape = []
